--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/me.png" alt="Vinayagam" class="img-fluid rounded-circle">
+      <img src="assets/img/me-2.jpeg" alt="Vinayagam" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Experience:</strong> <span>2 Years</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>github.com/vinaythaagam</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>github.com/vinaythaagam</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-9025533402</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Chennai, India</span></li>
                 </ul>
@@ -110,7 +110,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Stack:</strong> <span>Python, Django, AWS</span></li>
                 </ul>
               </div>
-            </div>
+            </div>walkin 
             <p class="py-3">
               I have successfully delivered 8+ production-ready Django applications, achieving significant reductions in manual workload through automation using AWS SES, SNS, and WhatsApp Business APIs. My expertise includes integrating advanced AI tools like the Gemini API for data validation and fraud prevention.
             </p>
